# solana-validator-optimizer

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Config.toml  Config.toml.example  LICENSE  NOTICE  README.md  SECURITY.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  metrics.rs  rpc_cache_layer.rs
crates/pro/: Cargo.toml
crates/pro/src/: lib.rs
solana-validator-optimizer-main/: README.md
solana-validator-optimizer-main/docs/: benchmark_report.md
src/: blockstream_optimizer.rs  config.rs  config_autotuner.rs  lib.rs  main.rs  metrics.rs  rpc_cache_layer.rs  snapshot_prefetcher.rs
