[package]
name = "solana-validator-optimizer"
version = "1.1.1"
edition = "2021"
description = "Optimized Solana validator tool with snapshot prefetching, RPC caching, and Prometheus metrics."
authors = ["Orlando D. Trajano <orlychikka@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/0rlych1kk4/solana-validator-optimizer"
repository = "https://github.com/0rlych1kk4/solana-validator-optimizer"
documentation = "https://docs.rs/solana-validator-optimizer"
keywords = ["solana", "validator", "rpc", "prometheus", "metrics"]
categories = ["command-line-utilities", "network-programming", "cryptography"]

[lib]
name = "solana_validator_optimizer"
path = "src/lib.rs"

[[bin]]
name = "solana-validator-optimizer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
clap = { version = "4.0", features = ["derive"] }
lru = "0.10"
prometheus = "0.13"
rayon = "1.7"
solana-client = "1.18"
solana-sdk = "1.18"
solana-ledger = "1.18"
config = "0.13"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
sha2 = "0.10"
futures-util = "0.3"
axum = "0.7"
once_cell = "1.19"
hyper = { version = "1", features = ["full"] }

[features]
default = []
pro = []

